# madgod-integrated-worktrance

./: .gitignore  BUILDING.md  Cargo.toml  Readme.md  chat.js  code.js  commands.js  context.js  default.json  esp32.js  graph.js  index.html  init.js  install.ps1  install.sh  launch.sh  main.css  main.py  note.js  package.json  platformio.ini  requirements.txt  router.js  state.js  sync.sh  tauri-bridge.js  terminal.js  visual.js
.github/workflows/: release.yml
scripts/: bundle-sidecar.js
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
