[package]
name    = "madgod"
version = "0.1.0"
edition = "2021"
description = "MADGOD — workspace operating environment"
authors  = ["numbpill3d"]
license  = "MIT"

[lib]
name = "madgod_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "madgod"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-fs       = "2"
tauri-plugin-process  = "2"
tauri-plugin-updater  = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
